--- a/web-imc/src/index.css
+++ b/web-imc/src/index.css
@@ -1,3 +1,4 @@
+
 body { 
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -25,13 +26,16 @@ body {
 
 .calculatorDivAgeGender, .calculatorDivWeightHeight{
   display: inline-block;
-  height: 250px;
-  width: 50%;
+  height: 200px;
+  width: 40%;
   vertical-align: top; 
   box-shadow: 0px 3px 13px 1px rgb(0 0 0 /9%); 
   font-size: 20px;
   text-align: center;
+  margin-left: 100px;
+  margin-top: 50px;
 }
+
 .selectGen {
   height: 50px;
   width: 200px;
@@ -46,9 +50,19 @@ body {
 
 input {
   height: 40px;
-  width: 150px;
+  width: 75px;
   font-size: 18px;
-  border-radius: 5px;
+  border: none;
+  border-bottom: 2px solid black;
+  outline: none;
+  background-color: transparent;
+}
+
+label {
+  font-size: 16px;
+  color: black;
+  pointer-events: none;
+  transition: 0.2s ease-out;
 }
 
 .imgMan {
@@ -69,6 +83,8 @@ input {
 
 .information {
   font-size: 30px;
+  position: relative;
+  top:80%;  
 }
 
 p {
@@ -76,11 +92,38 @@ p {
   width: 50%;
 }
 
-.information, .description { 
-  padding-left: 3%;
+.information, .description, .List { 
+  padding-left: 9%;
 }
 
 
 .buttonCalculate:active {
-  background:#f2000f;
+  background:#2b2a2a;
+}
+
+.Nav {
+  position: absolute;
+  width: 100%;
+  height: 8%;
+  box-shadow: 0px 3px 1px rgb(0 0 0 /9%);
+}
+
+.ImgNavHome {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  left: 10%;
+}
+
+.ImgGit {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  left: 80%;
+  top: 0px;
+}
+
+.calculator {
+  position:relative;
+  top: 80px;
 }
