--- a/web-imc/src/CascadingStyle/index.css
+++ b/web-imc/src/CascadingStyle/index.css
@@ -109,21 +109,59 @@ p {
 }
 
 .ImgNavHome {
-  width: 50px;
+  width: 120px;
   height: 50px;
   position: absolute;
-  left: 10%;
+  left:46%;
 }
 
 .ImgGit {
   position: absolute;
   width: 50px;
   height: 50px;
-  left: 80%;
+  left: 90%;
   top: 0px;
 }
 
 .calculator {
   position:relative;
   top: 80px;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.menu {
+  position: absolute;
+  width: 300px;
+  height: auto;
+  top: 30px; /* Ajusta según sea necesario */
+  left: 0;
+  background-color: #f9f9f9;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  z-index: 1;
+}
+
+.menu ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.menu li {
+  padding: 8px;
+  cursor: pointer;
+}
+
+.menu li:hover {
+  background-color: #ddd;
+}
+
+.ImgMenu {
+  position: relative;
+  height: 45px;
+  width: 60px;
+  left: 50%;
 }
