--- a/web-imc/src/CascadingStyle/index.css
+++ b/web-imc/src/CascadingStyle/index.css
@@ -83,8 +83,6 @@ label {
 
 .information {
   font-size: 30px;
-  position: relative;
-  top:80%;  
 }
 
 p {
@@ -92,7 +90,7 @@ p {
   width: 50%;
 }
 
-.information, .description, .List { 
+.information, .description { 
   padding-left: 9%;
 }
 
@@ -112,7 +110,7 @@ p {
   width: 120px;
   height: 50px;
   position: absolute;
-  left:46%;
+  left:42%;
 }
 
 .ImgGit {
@@ -135,14 +133,18 @@ p {
 
 .menu {
   position: absolute;
-  width: 300px;
+  width: 1350px;
   height: auto;
-  top: 30px; /* Ajusta según sea necesario */
+  top: 40px; /* Ajusta según sea necesario */
   left: 0;
   background-color: #f9f9f9;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   padding: 10px;
+  display: flex;
+  flex-direction: row;
   z-index: 1;
+  transform: translateY(10px);
+  gap: 180px;
 }
 
 .menu ul {
@@ -165,3 +167,19 @@ p {
   width: 60px;
   left: 50%;
 }
+
+.Questions { 
+  position: relative;
+  text-align:center;
+  left:120px;
+  top:80px;
+  width:1000px;
+  height:550px;
+  box-shadow:0px 3px 13px 1px rgb(0 0 0 /9%);
+}
+
+.Answer {
+ position: relative;
+ left: 250px;
+} 
+
