--- a/web-imc/src/CascadingStyle/index.css
+++ b/web-imc/src/CascadingStyle/index.css
@@ -5,7 +5,7 @@ body {
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #E5E5E5;
+  background-color: E5E5E5;
 }
 
 .titleCalculator {
@@ -45,7 +45,7 @@ p {
 
 .calculatorDivAgeGender, .calculatorDivWeightHeight{
   display: inline-block;
-  height: 200px;
+  height: 250px;
   width: 40%;
   vertical-align: top; 
   box-shadow: 0px 3px 13px 1px rgb(0 0 0 /9%); 
@@ -96,31 +96,30 @@ label {
 
 .Nav {
   position: relative;
-  background-color: #A4A4A4;
+  background-color: #f5f6f7;
   width: auto;
-  padding: 10px;
 }
 
 .dropdown {
   position: relative;
   display: inline-block;
-  top:30px;
+  top:20px;
 }
 
 .menu {
   position: absolute;
-  width: 1312px;
+  width: 1313px;
   height: auto;
   top: 30px; /* Ajusta según sea necesario */
   left: 0;
-  background-color: #A4A4A4;
+  background-color: #f5f6f7 ;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: row;
   padding: 10px;
   z-index: 1;
   gap:180px;
-  transform: translateY(10%);
+  transform: translateY(6%);
 }
 
 .menu ul {
@@ -176,8 +175,9 @@ label {
 
 .ImgNavHome { 
   position: relative;
-  width: 100px;
+  width: 120px;
   left: 23%;
+  top:0;
 
 }
 
@@ -187,6 +187,16 @@ label {
   left: 90%;
 }
 
+.MaleImg, .FamaleImg {
+width: 70px;
+height: 70px;
+}
+
+.selectGender { 
+  display: flex;
+  gap:40px;
+  margin-left: 180px;
+}
 .results {
   padding: 10px;
 }
