--- a/web-imc/src/CascadingStyle/index.css
+++ b/web-imc/src/CascadingStyle/index.css
@@ -147,11 +147,11 @@ label {
 .Questions { 
   position: relative;
   text-align:center;
-  left:120px;
+  left:200px;
+  right: 200px;
   top:80px;
-  width:1000px;
+  width:900px;
   height:550px;
-  box-shadow:0px 3px 13px 1px rgb(0 0 0 /9%);
 }
 
 .Answer {
@@ -175,7 +175,7 @@ label {
 
 .ImgNavHome { 
   position: relative;
-  width: 120px;
+  width: 0100px;
   left: 23%;
   top:0;
 
@@ -199,4 +199,38 @@ height: 70px;
 }
 .results {
   padding: 10px;
+}
+
+.Definition {
+  position: relative;
+  text-align:center ; 
+}
+
+.CaloriesDefinition {
+  position: relative;
+  text-align: center; 
+  left:25%;
+  box-shadow: 0px 3px 13px 1px rgb(0 0 0 /9%) ;
+}
+
+.CaloriesOrigen {
+  position:relative; 
+  text-align: center; 
+}
+
+.CaloriesOrigenInformation { 
+  position: relative; 
+  text-align: center ;
+  left:25%;
+}
+
+.CaloriesAndMetabolism { 
+  position:relative ;
+  text-align:center;
+}
+
+.CaloriesAndMetabolismInformation {
+  position:relative ;
+  text-align:center;
+  left:25%;
 }
